--- a/Model/index.html
+++ b/Model/index.html
@@ -1,12 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+ 
+<!-- this is my first webpage </p > -->
+<html>
+   
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <script src="./index.js"></script>
-</body>
+            <title> Pasta </title>
+        </head>
+
+<body style="background-color:#4fc73f">
+        <a href=" ">Home</a>
+        <a href="news1.html">News</a>
+        
+        <h1 style="color:red; font-family: fantasy;text-align:center" ;>Pasta Recipies</h1>
+        <h2 style="font-size: 500%">Lasagna</h2>
+        <p>
+        <mark>How to Make
+            <b><i>Lasagna</i></b>
+            For this recipe, we are essentially making a thick, meaty
+            <small>
+                tomato sauce
+            </small>
+
+            and layering that with noodles and cheese into a casserole. Here's the
+            run-down:
+            <br><br>
+        </mark>
+            
+            <sub>Start</sub>
+        by making the sauce with
+        <sup>ground beef</sup>
+        , bell peppers, onions, and a combo of
+        tomato sauce, tomato paste, and crushed tomatoes. The three kinds of tomatoes gives the sauce great depth of
+        flavor.
+        <br><br>
+                
+            Let this simmer while you boil the noodles and get the cheeses ready. We're using ricotta, shredded
+        mozzarella, and parmesan -- like the mix of tomatoes, this 3-cheese blend gives the lasagna great
+        flavor!
+
+        <br><br>
+            
+            From there, it's just an assembly job. A cup of meat sauce, a layer of noodles, more sauce, followed by a
+        layer of cheese. Repeat until you have three layers and have used up all the ingredients.<br><br>
+            
+                Bake until bubbly and you're ready to eat
+    </p>
+        
+        <a href="https://www.the-pasta-project.com/">Click here for pasta recipies </a>
+        
+        <img src="pasta.jpg" width="200" height="150" style="float: right">
+       
+        <ul>
+          <li>Ravioli</li>
+          <li>Spaghetti</li>
+          <li>Penne Arabiata</li>
+    </ul>
+        
+        
+        
+        </body>
+
 </html>
